--- a/requirements.txt
+++ b/requirements.txt
@@ -13,15 +13,19 @@ gunicorn==20.1.0
 hyperlink==21.0.0
 idna==3.4
 incremental==21.3.0
+jsonschema==4.16.0
 psycopg2==2.9.4
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pyOpenSSL==22.1.0
+pyproject-toml==0.0.10
+pyrsistent==0.18.1
 python-decouple==3.6
 service-identity==21.1.0
 six==1.16.0
 sqlparse==0.4.3
+toml==0.10.2
 Twisted==22.8.0
 twisted-iocpsupport==1.0.2
 txaio==22.2.1
